--- a/package.json
+++ b/package.json
@@ -9,10 +9,36 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.8",
+    "@emotion/styled": "^11.10.8",
+    "@fontsource/roboto": "^4.5.8",
+    "@hookform/resolvers": "^3.1.0",
+    "@iconify/react": "^4.1.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/lab": "^5.0.0-alpha.130",
+    "@mui/material": "^5.12.3",
+    "@mui/styled-engine-sc": "^5.12.0",
+    "@mui/x-date-pickers": "^6.4.0",
+    "axios": "^1.4.0",
+    "dayjs": "^1.11.7",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.0",
+    "mdi-material-ui": "^7.7.0",
+    "mui-file-input": "^2.0.0",
+    "mui-one-time-password-input": "^1.1.0",
     "next": "13.3.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-credit-cards-2": "^1.0.1",
+    "react-dom": "18.2.0",
+    "react-google-recaptcha": "^2.1.0",
+    "react-hook-form": "^7.43.9",
+    "react-toastify": "^9.1.3",
+    "styled-components": "^5.3.10",
+    "yup": "^1.1.1"
+  },
+  "devDependencies": {
+    "@types/node": "18.16.3"
   }
 }
