--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mui-file-input": "^2.0.0",
     "mui-one-time-password-input": "^1.1.0",
     "next": "13.3.4",
+    "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-credit-cards-2": "^1.0.1",
     "react-dom": "18.2.0",
