--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@mui/lab": "^5.0.0-alpha.130",
     "@mui/material": "^5.12.3",
     "@mui/styled-engine-sc": "^5.12.0",
+    "@mui/x-data-grid": "^6.6.0",
     "@mui/x-date-pickers": "^6.4.0",
     "axios": "^1.4.0",
+    "better-react-carousel": "^1.1.1",
     "dayjs": "^1.11.7",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
@@ -28,13 +30,14 @@
     "mdi-material-ui": "^7.7.0",
     "mui-file-input": "^2.0.0",
     "mui-one-time-password-input": "^1.1.0",
-    "next": "13.3.4",
+    "next": "^13.3.4",
     "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-credit-cards-2": "^1.0.1",
     "react-dom": "18.2.0",
     "react-google-recaptcha": "^2.1.0",
     "react-hook-form": "^7.43.9",
+    "react-table": "^7.8.0",
     "react-toastify": "^9.1.3",
     "styled-components": "^5.3.10",
     "yup": "^1.1.1"
